--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -10,7 +10,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   build:
-    name: ubuntu-18.04
+    name: Build
     runs-on: ubuntu-18.04
     container: devkitpro/devkitppc:latest
     
@@ -23,15 +23,24 @@ jobs:
     - name: Install cmake
       run: |
         apt-get install -y cmake
-    - name: Build
+    - name: Build Hello World
       run : |
         cd resources/3-1-HelloWorld
         mkdir build
         cd build
         cmake ..
-        make -j4 
+        make -j4
+    - name : Build Button Tester
+      run: |
+        cd resources/4-1-ButtonTester
+        mkdir build
+        cd build
+        cmake ..
+        make -j4
     - name: Upload Files
       uses: actions/upload-artifact@v2
       with:
         name: Build
-        path: "resources/3-1-HelloWorld/build/helloworld.rpx"
+        path: |
+          resources/3-1-HelloWorld/build/helloworld.rpx
+          resources/4-1-ButtonTester/build/buttontest/rpx
